Alterando título da página

--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title>Cursos da Alura-</title>
-=======
-    <title>Cursos da Alura </title>
->>>>>>> main
-</head>
+    <title>Lista de cursos de DevOps da Alura</title></head>
 <body>
     <ul>
         <li>Vagrant</li>
