--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title>Cursos da Alura</title>
+    <title>Lista de cursos de DevOps da Alura</title>
 </head>
-=======
-    <title>Lista de cursos de DevOps da Alura</title></head>
->>>>>>> c66a3ca830d31b733431c179ed94e5e1f14f6565
 <body>
     <ul>
         <li>Vagrant</li>
