--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de cursos de DevOps da Alura #Não entendi</title>
+    <title>Lista de cursos de DevOps da Alura #alterei</title>
 </head>
 <body>
     <ul>
